# aoc-2025

./: Cargo.toml  justfile  rustfmt.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: part1.rs  part2.rs
day-03/benches/: benchmarks.rs
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: part1.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: part1.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: part1.rs  part2.rs
scripts/: get-aoc-inputs.rs
